--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,14 @@ environment:
   sdk: ^3.5.2
 
 dependencies:
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^17.2.3
   intl: ^0.19.0
+  permission_handler: ^11.3.1
+  redis: ^4.0.0
 
 dev_dependencies:
   flutter_test:
