update to main menu (3->5 items), create repos for connecting API

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 }
 
 android {
+    compileSdkVersion 31
     namespace = "com.fov.waiter_mobile_app"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
