--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,16 @@ environment:
   sdk: ^3.5.2
 
 dependencies:
+  convex_bottom_bar: ^3.2.0
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   flutter:
     sdk: flutter
   flutter_local_notifications: ^17.2.3
+  flutter_secure_storage: ^9.2.2
+  geocoding: ^3.0.0
+  geolocator: ^13.0.1
+  http: ^1.2.2
   intl: ^0.19.0
   permission_handler: ^11.3.1
   redis: ^4.0.0
