--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,14 @@ dependencies:
   firebase_messaging: ^15.1.3
   flutter:
     sdk: flutter
+  flutter_analog_clock: ^1.0.3
   flutter_local_notifications: ^17.2.3
   flutter_secure_storage: ^9.2.2
   geocoding: ^3.0.0
   geolocator: ^13.0.1
   http: ^1.2.2
   intl: ^0.19.0
+  material: ^1.0.0+2
   permission_handler: ^11.3.1
   redis: ^4.0.0
 
