--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   material: ^1.0.0+2
   permission_handler: ^11.3.1
   redis: ^4.0.0
+  signalr_netcore: ^1.4.0
 
 dev_dependencies:
   flutter_test:
