--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,11 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   geocoding: ^3.0.0
   geolocator: ^13.0.1
+  get_it: ^8.0.2
   http: ^1.2.2
   intl: ^0.19.0
   material: ^1.0.0+2
+  mobile_scanner: ^6.0.2
   permission_handler: ^11.3.1
   redis: ^4.0.0
   signalr_netcore: ^1.4.0
