--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   mobile_scanner: ^6.0.2
   permission_handler: ^11.3.1
   redis: ^4.0.0
+  shared_preferences: ^2.3.3
   signalr_netcore: ^1.4.0
 
 dev_dependencies:
