--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -39,4 +39,5 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab"
-          tag: v1.0.${{ github.run_number }}  
+          tag: v1.0.${{ github.run_number }}
+          token: ${{secrets.TOKEN}}
