--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
-        android:label="Waiter Mobile App"
+        android:label="Employee Mobile App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
