--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   redis: ^4.0.0
   shared_preferences: ^2.3.3
   signalr_netcore: ^1.4.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
