--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   convex_bottom_bar: ^3.2.0
+  cron: ^0.6.1
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   flutter:
