--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   redis: ^4.0.0
   shared_preferences: ^2.3.3
   signalr_netcore: ^1.4.0
+  string_extensions: ^0.7.3
   table_calendar: ^3.1.2
 
 dev_dependencies:
